format + cleanup